--- a/backend/Dockerfile.api
+++ b/backend/Dockerfile.api
@@ -1,18 +1,49 @@
-FROM python:3.11-slim
+FROM nvidia/cuda:13.0.1-cudnn-devel-ubuntu24.04
 
-# Set environment variables
+# Prevent interactive prompts during package installation
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Set environment variables for Python and CUDA
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    PATH=/usr/local/cuda/bin:${PATH} \
+    LD_LIBRARY_PATH=/usr/local/cuda/lib64:${LD_LIBRARY_PATH} \
+    CUDA_HOME=/usr/local/cuda
 
 # Create app directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including Python, OpenCV, and all runtime libraries
 RUN apt-get update && apt-get install -y \
+    # Python
+    python3.11 \
+    python3-pip \
+    python3.11-dev \
+    # Build tools
+    build-essential \
+    cmake \
+    # OpenCV and image processing (Ubuntu 24.04 = v4.6)
     libopencv-dev \
+    libopencv-core406 \
+    libopencv-imgcodecs406 \
+    libopencv-imgproc406 \
+    libopencv-highgui406 \
+    # MPI libraries (in case binary uses them)
+    libopenmpi-dev \
+    openmpi-bin \
+    # Other utilities
+    libgomp1 \
+    curl \
     && rm -rf /var/lib/apt/lists/*
+
+# Set python3.11 as default python3
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
+    update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1
+
+# Upgrade pip
+RUN python3 -m pip install --upgrade pip setuptools wheel
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
@@ -21,6 +52,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy API server code
 COPY api_server.py .
 
+# Copy binary verification script
+COPY check_binary.sh /usr/local/bin/check_binary.sh
+RUN chmod +x /usr/local/bin/check_binary.sh
+
 # Create temp directory for image processing
 RUN mkdir -p /tmp/pixelux && chmod 777 /tmp/pixelux
 
@@ -28,8 +63,8 @@ RUN mkdir -p /tmp/pixelux && chmod 777 /tmp/pixelux
 EXPOSE 8000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8000/api/health')" || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
+    CMD python3 -c "import requests; requests.get('http://localhost:8000/api/health')" || exit 1
 
-# Run the API server
-CMD ["python", "api_server.py"]
+# Run binary check then start API server
+CMD ["/bin/bash", "-c", "/usr/local/bin/check_binary.sh && python3 api_server.py"]
