--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -84,13 +84,15 @@ services:
       - DEBUG=false
     depends_on:
       - master
+      - worker1
+      - worker2
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "python", "-c", "import requests; requests.get('http://localhost:8000/api/health')"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health", "||", "exit", "1"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 15s
 
 networks:
   mpi-net:
