--- a/backend/Dockerfile.api
+++ b/backend/Dockerfile.api
@@ -1,18 +1,29 @@
-FROM python:3.11-slim
+FROM nvidia/cuda:13.0.1-cudnn-devel-ubuntu24.04
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=1 \
-    PIP_DISABLE_PIP_VERSION_CHECK=1
-
-# Create app directory
-WORKDIR /app
+ENV DEBIAN_FRONTEND=noninteractive
+ENV PYTHONUNBUFFERED=1
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     libopencv-dev \
+    python3 \
+    python3-dev \
+    python3-pip \
+    python3.12-venv \
+    cmake libopencv-dev \
+    build-essential \
+    openmpi-bin openmpi-common libopenmpi-dev openmpi-doc \
+    openssh-client openssh-server \
+    nfs-common net-tools iputils-ping nano vim htop \
     && rm -rf /var/lib/apt/lists/*
+
+# Crear symlink para python
+RUN ln -s /usr/bin/python3 /usr/bin/python
+WORKDIR /app
+
+# Create and activate Python virtual environment
+RUN python -m venv /app/venv
+ENV PATH="/app/venv/bin:$PATH"
 
 # Copy requirements and install Python dependencies
 COPY requirements.txt .
