feat: fix error and issues

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -84,6 +84,8 @@ services:
       - DEBUG=false
     depends_on:
       - master
+      - worker1
+      - worker2
     deploy:
       resources:
         reservations:
